# MangaNa_Web

./: .gitignore  manage.py  pyproject.toml
fe_namanga/public/: index.html
fe_namanga/src/: App.js  index.css
fe_namanga/src/Components/AuthForm/: Home.jsx  LoginForm.css  LoginForm.jsx  RegisterForm.css  RegisterForm.jsx
namanga/: settings.py  urls.py  wsgi.py
namanga/apps/engine/: apps.py  models.py  serializers.py  urls.py  views.py
namanga/apps/engine/migrations/: 0001_initial.py  0002_chapter_comment_manga_user_avatar_user_level_and_more.py  0003_alter_manga_total_chapter.py  0004_manga_views.py  0005_history_manga.py  0006_remove_history_manga_history_chapter.py  0007_remove_history_chapter.py
namanga/apps/engine/models_container/: __init__.py  chapter.py  comment.py  enum_type.py  history.py  image.py  manga.py  re_comment.py  user.py  user_chapter.py  user_manga.py
namanga/apps/engine/routers/: auth.py  chapter.py  history.py  manga.py  user.py
namanga/apps/engine/serializers_container/: __init__.py  chapter.py  history.py  manga.py  user.py
namanga/apps/engine/utils/: constant.py  helper.py  save_image.py  send_email.py  template_mail.py
namanga/apps/engine/views_container/: __init__.py  auth.py  chapter.py  history.py  manga.py  user.py
namanga/setting/: path.py
namanga/setting/fe_namanga/templates/image_manga/avatar_manga/: a
